# spdlog-use

./: CMakeLists.txt  README.md
pro/: main.cpp  myspdlog.cpp  myspdlog.h  test.cpp  test.h
pro/testThread/: a.out  main.cpp
